feat: Se agrego soporte para widgets grandes y un roadmap para futuros contribuyentes de la institucion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="widget_enfermeria_description">Avisa a la enfermería.</string>
     <string name="widget_tutor_description">Avisa a tu tutor.</string>
     <string name="widget_contacto_description">Avisa a tu contacto cercano.</string>
+    <string name="widget_enfermeria_description_large">Widget grande para avisar a la enfermería.</string>
+    <string name="widget_tutor_description_large">Widget grande para avisar a tu tutor.</string>
+    <string name="widget_contacto_description_large">Widget grande para avisar a tu contacto cercano.</string>
 </resources>
